@@ -1,7 +1,6 @@
 package it.pagopa.atmlayer.wf.process.database.dynamo.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import it.pagopa.atmlayer.wf.process.database.dynamo.entity.InstanceVariables;
 import it.pagopa.atmlayer.wf.process.database.dynamo.service.contract.InstanceVariablesService;
@@ -23,7 +22,7 @@ public class InstanceVariablesServiceImpl extends InstanceVariablesService{
     public List<InstanceVariables> findAll() {
         return dynamoDB.scanPaginator(scanRequest()).items().stream()
                 .map(InstanceVariables::from)
-                .collect(Collectors.toList());
+                .toList();
     }
     
 }
