@@ -1,16 +1,15 @@
 package it.pagopa.atmlayer.wf.process.service.impl;
 
 import java.io.IOException;
-import java.net.URL;
-import java.util.Arrays;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
 
 import org.eclipse.microprofile.rest.client.inject.RestClient;
@@ -24,7 +23,9 @@ import it.pagopa.atmlayer.wf.process.bean.VariableResponse;
 import it.pagopa.atmlayer.wf.process.client.camunda.CamundaRestClient;
 import it.pagopa.atmlayer.wf.process.client.camunda.bean.CamundaBodyRequestDto;
 import it.pagopa.atmlayer.wf.process.client.camunda.bean.CamundaResourceDto;
+import it.pagopa.atmlayer.wf.process.client.camunda.bean.CamundaTaskDto;
 import it.pagopa.atmlayer.wf.process.client.camunda.bean.CamundaVariablesDto;
+import it.pagopa.atmlayer.wf.process.client.camunda.bean.InstanceDto;
 import it.pagopa.atmlayer.wf.process.client.model.ModelRestClient;
 import it.pagopa.atmlayer.wf.process.client.model.bean.ModelBpmnDto;
 import it.pagopa.atmlayer.wf.process.client.transactions.TransactionsServiceRestClient;
@@ -57,37 +58,34 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
 
     @RestClient
     ModelRestClient modelRestClient;
-
+    
     @RestClient
     TransactionsServiceRestClient transactionsRestClient;
-
-    @Inject
-    InstanceVariablesServiceImpl instanceVariablesService;
 
     @Inject
     Properties properties;
 
     @Inject
-    PubSubService pubSubService;
+    InstanceVariablesServiceImpl instanceVariablesService;
 
     /**
      * {@inheritDoc}
      */
     public RestResponse<Object> deploy(String requestUrl, String fileName) throws IOException {
         long start = 0;
-        log.info("CAMUNDA DEPLOY sending request with params: [ requestUrl: " + requestUrl + ", fileName: " + fileName
-                + " ]");
+        log.info("CAMUNDA DEPLOY sending request with params: [ requestUrl: " + requestUrl + ", fileName: " + fileName + " ]");
         RestResponse<Object> camundaDeployResponse;
 
         try {
             start = System.currentTimeMillis();
-            camundaDeployResponse = camundaRestClient.deploy(Utility.downloadBpmnFile(new URL(requestUrl), fileName));
+            URI uri = new URI(requestUrl);
+            camundaDeployResponse = camundaRestClient.deploy(Utility.downloadBpmnFile(uri.toURL(), fileName));
             log.info("Resource deployed!");
-        } catch (WebApplicationException e) {
+        } catch (WebApplicationException | URISyntaxException e) {
             log.error("Deploy bpmn failed! The service may be unreachable or an error occured:", e);
             throw new ProcessException(ProcessErrorEnum.DEPLOY_D01);
         } finally {
-            logElapsedTime(CAMUNDA_DEPLOY_LOG_ID, start);
+			logElapsedTime(CAMUNDA_DEPLOY_LOG_ID , start);
         }
 
         return camundaDeployResponse;
@@ -111,24 +109,23 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
      * @param variables
      */
     public void start(String transactionId, String functionId, DeviceInfo deviceInfo, Map<String, Object> variables) {
-
-        Map<String, Object> extendedVariables = Utility.populateDeviceInfoVariables(transactionId, deviceInfo,
-                variables);
+        
+        Map<String, Object> extendedVariables = Utility.populateDeviceInfoVariables(transactionId, deviceInfo, variables);
         extendedVariables.put(Constants.FUNCTION_ID, functionId);
         extendedVariables.put(Constants.TRANSACTION_STATUS, Constants.TRANSACTION_STATUS_NEW_SESSION);
 
         RestResponse<ModelBpmnDto> modelFindBpmnIdResponse = findBpmnId(functionId, deviceInfo);
 
         String bpmnId = getBpmnId(modelFindBpmnIdResponse, functionId);
-
+        
         final TransactionServiceRequest request = new TransactionServiceRequest();
         request.setFunctionType(functionId);
         request.setAcquirerId(deviceInfo.getBankId());
         request.setBranchId(deviceInfo.getBranchId());
         request.setTerminalId(deviceInfo.getTerminalId());
         request.setTransactionId(transactionId);
-        request.setTransactionStatus((String) extendedVariables.get(Constants.TRANSACTION_STATUS));
-
+        request.setTransactionStatus((String)extendedVariables.get(Constants.TRANSACTION_STATUS));
+    
         CompletableFuture.runAsync(() -> transactionsRestClient.inset(request));
 
         startInstance(transactionId, bpmnId, extendedVariables);
@@ -151,13 +148,11 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
 
         deviceInfo = Utility.constructModelDeviceInfo(deviceInfo);
         try {
-
-            log.info("MODEL FIND BPMN BY TRIAD REQUEST sending request with params: [ functionId: " + functionId
-                    + ", bankId: " + deviceInfo.getBankId() + ", branchId: " + deviceInfo.getBranchId()
-                    + ", terminalId: " + deviceInfo.getTerminalId() + " ]");
+            
+            log.info("MODEL FIND BPMN BY TRIAD REQUEST sending request with params: [ functionId: " + functionId + ", bankId: " + deviceInfo.getBankId()
+                    + ", branchId: " + deviceInfo.getBranchId() + ", terminalId: " + deviceInfo.getTerminalId() + " ]");
             start = System.currentTimeMillis();
-            modelFindBpmnIdResponse = modelRestClient.findBPMNByTriad(functionId, deviceInfo.getBankId(),
-                    deviceInfo.getBranchId(), deviceInfo.getTerminalId());
+            modelFindBpmnIdResponse = modelRestClient.findBPMNByTriad(functionId, deviceInfo.getBankId(), deviceInfo.getBranchId(), deviceInfo.getTerminalId());
         } catch (WebApplicationException e) {
             switch (e.getResponse().getStatus()) {
                 case RestResponse.StatusCode.BAD_REQUEST ->
@@ -177,7 +172,7 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
         return modelFindBpmnIdResponse;
     }
 
-    private String getBpmnId(RestResponse<ModelBpmnDto> modelFindBpmnIdResponse, String functionId) {
+    private String getBpmnId(RestResponse<ModelBpmnDto> modelFindBpmnIdResponse, String functionId){
         String bpmnId = functionId;
 
         /*
@@ -203,6 +198,7 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
      */
     private void startInstance(String transactionId, String bpmnId, Map<String, Object> variables) {
         long start = 0;
+
         List<InstanceVariables> instanceVariablesList = new LinkedList<>();
         try {
             /*
@@ -221,13 +217,12 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
         } catch (SdkException e){
             log.error("Error while trying to retrieve instance variables from DynamoDB: ", e);
         }
-        
+
         try {
-            
             CamundaBodyRequestDto body = CamundaBodyRequestDto.builder()
-                    .businessKey(transactionId)
-                    .variables(Utility.generateBodyRequestVariables(variables))
-                    .build();
+                .businessKey(transactionId)
+                .variables(Utility.generateBodyRequestVariables(variables))
+                .build();
 
             log.info("CAMUNDA START INSTANCE sending request with params: [functionId: {}, body: {}]", bpmnId, body);
 
@@ -251,22 +246,18 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
                 }
             }
         } finally {
-            logElapsedTime(CAMUNDA_START_INSTANCE_LOG_ID, start);
+            logElapsedTime(CAMUNDA_START_INSTANCE_LOG_ID , start);
         }
-    }
-
-    public RestResponse<TaskResponse> retrieveActiveTasks(String businessKey) {
-        return retrieveActiveTasks(businessKey, false);
     }
 
     /**
      * {@inheritDoc}
      */
-    public RestResponse<TaskResponse> retrieveActiveTasks(String businessKey, boolean isExternal) {
+    public RestResponse<TaskResponse> retrieveActiveTasks(String businessKey) {
         RestResponse<TaskResponse> response;
 
         if (businessKey != null) {
-            response = getActiveTasks(businessKey, isExternal);
+            response = getActiveTasks(businessKey);
         } else {
             throw new ProcessException(ProcessErrorEnum.BUSINESS_KEY_NOT_PRESENT);
         }
@@ -281,49 +272,24 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
      * @return A `RestResponse` containing the retrieved tasks.
      * @throws InterruptedException
      */
-    private RestResponse<TaskResponse> getActiveTasks(String businessKey, boolean isExternal) {
+    private RestResponse<TaskResponse> getActiveTasks(String businessKey) {
+        RestResponse<List<CamundaTaskDto>> camundaTaskList = getList(businessKey);
 
-        SubscriptionPayload payload = this.pubSubService.subscribe(businessKey);
-        try {
-            long start = System.currentTimeMillis();
-            Task task = null;
-    //        try {
-                task = payload.getFuture().get(10000, TimeUnit.MILLISECONDS);
-      /*      } catch (TimeoutException e) {
-                log.info("Task not completed in 200ms ");
-                if (!isExternal) {
-                    log.info("Service task not completed yet!");
-                    return RestResponse.status(Status.ACCEPTED, new TaskResponse());
-                }
-            }
-            
-            int i = 0;
-            while (i < 5 && (task != null && task.isExternal()) || (isExternal && task == null)) {
-                // if ( (task != null && task.isExternal()) ||(isExternal && task == null)) {
-                log.info("Task with external call!  ");
-                payload.getSubscriber().unsubscribe();
-                payload = this.pubSubService.subscribe(businessKey);
-                task = payload.getFuture().get(4500, TimeUnit.MILLISECONDS);
-                i++;
-            }
-*/
-            logElapsedTime("PerformanceY", start);
-            if (task != null)
-                log.info("Task completed!  " + task.toString());
-            if (task == null || task.getId() == null || task.getId().trim().isEmpty())
-                return RestResponse.status(Status.OK, TaskResponse.builder().transactionId(businessKey).build());
-            return RestResponse.status(Status.CREATED,
-                    TaskResponse.builder().transactionId(businessKey).tasks(Arrays.asList(task)).build());
-       } catch (TimeoutException e) {
-            log.info("Service task not completed yet!");
-            return RestResponse.status(Status.ACCEPTED, new TaskResponse());
-        } catch (Exception e) {
-            log.error("Get list of tasks failed!", e);
-            throw new ProcessException(ProcessErrorEnum.GET_LIST_C03);
-        } finally {
-            if (payload.getSubscriber() != null)
-                payload.getSubscriber().unsubscribe();
-        }
+        log.info("Retrieving active tasks. . .");
+        List<Task> activeTasks = camundaTaskList.getEntity().stream()
+                .map(taskDto -> {
+                    log.info("ID: {} ", taskDto.getId());
+
+                    return Task.builder()
+                            .form(taskDto.getFormKey())
+                            .id(taskDto.getId())
+                            .priority(taskDto.getPriority())
+                            .build();
+                })
+                .collect(Collectors.toList());
+
+        return RestResponse.status(Status.fromStatusCode(camundaTaskList.getStatus()),
+                TaskResponse.builder().transactionId(businessKey).tasks(activeTasks).build());
     }
 
     /**
@@ -334,63 +300,54 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
      * @param businessKey
      * @return the list of camunda task associated to the businessKey
      */
-    /*
-     * private RestResponse<List<CamundaTaskDto>> getList(String businessKey) {
-     * RestResponse<List<CamundaTaskDto>> camundaGetListResponse;
-     * long start = 0;
-     * 
-     * try {
-     * log.info("CAMUNDA GET LIST sending request with params: [ businessKey: " +
-     * businessKey + " ]");
-     * CamundaBodyRequestDto body =
-     * CamundaBodyRequestDto.builder().processInstanceBusinessKey(businessKey).build
-     * ();
-     * 
-     * start = System.currentTimeMillis();
-     * camundaGetListResponse = camundaRestClient.getList(body);
-     * } catch (WebApplicationException e) {
-     * if (e.getResponse().getStatus() ==
-     * RestResponse.StatusCode.INTERNAL_SERVER_ERROR) {
-     * log.error("Get list of tasks failed!");
-     * throw new ProcessException(ProcessErrorEnum.GET_LIST_C03);
-     * } else {
-     * log.error(UNKNOWN_STATUS, e.getResponse().getStatus());
-     * throw new ProcessException(ProcessErrorEnum.GENERIC);
-     * }
-     * } finally {
-     * logElapsedTime(CAMUNDA_GET_LIST_LOG_ID, start);
-     * }
-     * 
-     * if (camundaGetListResponse.getEntity().isEmpty()) {
-     * 
-     * start = System.currentTimeMillis();
-     * RestResponse<List<InstanceDto>> instanceResponse =
-     * camundaRestClient.getInstanceActivity(businessKey);
-     * logElapsedTime(CAMUNDA_GET_INSTANCE_ACTIVITY_LOG_ID, start);
-     * 
-     * if (!instanceResponse.getEntity().isEmpty()) {
-     * log.debug("Instance still running...");
-     * 
-     * It is possibile that after start of a process or the complete of a specified
-     * task there is a service task in execution which takes
-     * long time to finish its work. We iterate till a predefined number of attempts
-     * and after a specified time.
-     * 
-     * camundaGetListResponse = retryActiveTasks(camundaGetListResponse,
-     * businessKey);
-     * if (camundaGetListResponse.getEntity().isEmpty()) {
-     * log.info("Service task not completed yet!");
-     * camundaGetListResponse = RestResponse.status(Status.ACCEPTED,
-     * Collections.emptyList());
-     * }
-     * } else {
-     * log.info("Process completed!");
-     * }
-     * }
-     * 
-     * return camundaGetListResponse;
-     * }
-     */
+    private RestResponse<List<CamundaTaskDto>> getList(String businessKey) {
+        RestResponse<List<CamundaTaskDto>> camundaGetListResponse;
+        long start = 0;
+
+        try {
+            log.info("CAMUNDA GET LIST sending request with params: [ businessKey: " + businessKey + " ]");
+            CamundaBodyRequestDto body = CamundaBodyRequestDto.builder().processInstanceBusinessKey(businessKey).build();
+
+            start = System.currentTimeMillis();
+            camundaGetListResponse = camundaRestClient.getList(body);
+        } catch (WebApplicationException e) {
+            if (e.getResponse().getStatus() == RestResponse.StatusCode.INTERNAL_SERVER_ERROR) {
+                log.error("Get list of tasks failed!");
+                throw new ProcessException(ProcessErrorEnum.GET_LIST_C03);
+            } else {
+                log.error(UNKNOWN_STATUS, e.getResponse().getStatus());
+                throw new ProcessException(ProcessErrorEnum.GENERIC);
+            }
+        } finally {
+            logElapsedTime(CAMUNDA_GET_LIST_LOG_ID, start);
+        }
+
+        if (camundaGetListResponse.getEntity().isEmpty()) {
+
+            start = System.currentTimeMillis();
+            RestResponse<List<InstanceDto>> instanceResponse = camundaRestClient.getInstanceActivity(businessKey);
+            logElapsedTime(CAMUNDA_GET_INSTANCE_ACTIVITY_LOG_ID, start);
+
+            if (!instanceResponse.getEntity().isEmpty()) {
+                log.debug("Instance still running...");
+                /*
+                 * It is possibile that after start of a process or the complete of a specified
+                 * task there is a service task in execution which takes
+                 * long time to finish its work. We iterate till a predefined number of attempts
+                 * and after a specified time.
+                 */
+                camundaGetListResponse = retryActiveTasks(camundaGetListResponse, businessKey);
+                if (camundaGetListResponse.getEntity().isEmpty()) {
+                    log.info("Service task not completed yet!");
+                    camundaGetListResponse = RestResponse.status(Status.ACCEPTED, Collections.emptyList());
+                }
+            } else {
+                log.info("Process completed!");
+            }
+        }
+
+        return camundaGetListResponse;
+    }
 
     /**
      * This method iterate the call to retrieve active tasks in camunda in case
@@ -402,56 +359,48 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
      * @param businessKey
      * @return RestResponse<List<CamundaTaskDto>>
      */
-    /*
-     * private RestResponse<List<CamundaTaskDto>>
-     * retryActiveTasks(RestResponse<List<CamundaTaskDto>> camundaGetListResponse,
-     * String businessKey) {
-     * int attempts = 0;
-     * 
-     * while (camundaGetListResponse.getEntity().isEmpty() && attempts <
-     * properties.getTaskListAttempts()) {
-     * ++attempts;
-     * 
-     * long start = 0;
-     * 
-     * try {
-     * Thread.sleep(properties.getTaskListTimeToAttempt());
-     * CamundaBodyRequestDto body =
-     * CamundaBodyRequestDto.builder().processInstanceBusinessKey(businessKey).build
-     * ();
-     * 
-     * start = System.currentTimeMillis();
-     * camundaGetListResponse = camundaRestClient.getList(body);
-     * 
-     * log.debug("Retry active task attempt {}", attempts);
-     * } catch (InterruptedException e) {
-     * log.error("Error during getActiveTask:", e);
-     * Thread.currentThread().interrupt();
-     * throw new ProcessException(ProcessErrorEnum.GENERIC);
-     * } catch (WebApplicationException e) {
-     * if (e.getResponse().getStatus() ==
-     * RestResponse.StatusCode.INTERNAL_SERVER_ERROR) {
-     * log.error("Get list of tasks failed!");
-     * throw new ProcessException(ProcessErrorEnum.GET_LIST_C03);
-     * } else {
-     * log.error(UNKNOWN_STATUS, e.getResponse().getStatus());
-     * throw new ProcessException(ProcessErrorEnum.GENERIC);
-     * }
-     * } finally {
-     * logElapsedTime(CAMUNDA_GET_LIST_LOG_ID, start);
-     * }
-     * }
-     * 
-     * return camundaGetListResponse;
-     * }
-     */
+    private RestResponse<List<CamundaTaskDto>> retryActiveTasks(
+            RestResponse<List<CamundaTaskDto>> camundaGetListResponse, String businessKey) {
+        int attempts = 0;
+
+        while (camundaGetListResponse.getEntity().isEmpty() && attempts < properties.getTaskListAttempts()) {
+            ++attempts;
+
+            long start = 0;
+
+            try {
+                Thread.sleep(properties.getTaskListTimeToAttempt());
+                CamundaBodyRequestDto body = CamundaBodyRequestDto.builder().processInstanceBusinessKey(businessKey).build();
+
+                start = System.currentTimeMillis();
+                camundaGetListResponse = camundaRestClient.getList(body);
+
+                log.debug("Retry active task attempt {}", attempts);
+            } catch (InterruptedException e) {
+                log.error("Error during getActiveTask:", e);
+                Thread.currentThread().interrupt();
+                throw new ProcessException(ProcessErrorEnum.GENERIC);
+            } catch (WebApplicationException e) {
+                if (e.getResponse().getStatus() == RestResponse.StatusCode.INTERNAL_SERVER_ERROR) {
+                    log.error("Get list of tasks failed!");
+                    throw new ProcessException(ProcessErrorEnum.GET_LIST_C03);
+                } else {
+                    log.error(UNKNOWN_STATUS, e.getResponse().getStatus());
+                    throw new ProcessException(ProcessErrorEnum.GENERIC);
+                }
+            } finally {
+                logElapsedTime(CAMUNDA_GET_LIST_LOG_ID, start);
+            }
+        }
+
+        return camundaGetListResponse;
+    }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public RestResponse complete(String taskId, Map<String, Object> variables, String functionId,
-            DeviceInfo deviceInfo) {
+    public void complete(String taskId, Map<String, Object> variables, String functionId, DeviceInfo deviceInfo) {
         RestResponse<ModelBpmnDto> modelFindBpmnIdResponse = findBpmnId(functionId, deviceInfo);
 
         if (modelFindBpmnIdResponse != null) {
@@ -459,11 +408,11 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
             String definitionVersionCamunda = modelFindBpmnIdResponse.getEntity().getDefinitionVersionCamunda();
             log.info("definitionKey: {}, definitionVersionCamunda: {}", definitionKey, definitionVersionCamunda);
 
-            variables = variables != null ? variables : Collections.emptyMap();
+            variables = variables != null ? variables : new HashMap<>();
             variables.put(Constants.DEFINITION_KEY, definitionKey);
             variables.put(Constants.DEFINITION_VERSION_CAMUNDA, definitionVersionCamunda);
 
-            return complete(taskId, variables);
+            complete(taskId, variables);
         } else {
             log.error("Model error occurred!");
             throw new ProcessException(ProcessErrorEnum.MODEL_GENERIC_ERROR_M02);
@@ -474,16 +423,18 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
      * {@inheritDoc}
      */
     @Override
-    public RestResponse complete(String taskId, Map<String, Object> variables) {
+    public void complete(String taskId, Map<String, Object> variables) {
         long start = 0;
-        RestResponse response = null;
+
         try {
             CamundaBodyRequestDto body = CamundaBodyRequestDto.builder()
-                    .variables(Utility.generateBodyRequestVariables(variables)).build();
+                .variables(Utility.generateBodyRequestVariables(variables))
+                .build();
 
             log.info("CAMUNDA COMPLETE sending request with params: [taskId: {}, body: {}]", taskId, body);
             start = System.currentTimeMillis();
-            response = RestResponse.status(Status.fromStatusCode(camundaRestClient.complete(taskId, body).getStatus()));
+            camundaRestClient.complete(taskId, body);
+
             log.info("Task completed! taskId: {}", taskId);
         } catch (WebApplicationException e) {
             switch (e.getResponse().getStatus()) {
@@ -499,7 +450,6 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
         } finally {
             logElapsedTime(CAMUNDA_COMPLETE_LOG_ID, start);
         }
-        return response;
     }
 
     /**
@@ -514,24 +464,22 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
      */
     public RestResponse<VariableResponse> getTaskVariables(String taskId, List<String> variables,
             List<String> buttons) {
-        long start = 0;
-        RestResponse<CamundaVariablesDto> taskVariables;
+        long start = 0;         
+         RestResponse<CamundaVariablesDto> taskVariables;
         try {
             log.info("CAMUNDA GET TASK VARIABLES sending request with params: [ taskId: {} ]", taskId);
             start = System.currentTimeMillis();
-            taskVariables = camundaRestClient.getTaskVariables(taskId);
-            log.info("Variables: [{}]", taskVariables);
-
-            Map<String, Object> mapVariables = Utility.mapVariablesResponse(taskVariables.getEntity());
-
+            taskVariables = camundaRestClient.getTaskVariables(taskId);            
+            log.info("Variables: [{}]", taskVariables);      
+           
+            Map<String, Object> mapVariables = Utility.mapVariablesResponse(taskVariables.getEntity());   
+            
             final TransactionServiceRequest request = new TransactionServiceRequest(
-                    (String) mapVariables.get(Constants.FUNCTION_ID),
-                    (String) mapVariables.get(Constants.TRANSACTION_ID),
-                    (String) mapVariables.get(Constants.TRANSACTION_STATUS));
-            CompletableFuture.runAsync(() -> {
-                transactionsRestClient.update(request);
-            });
-
+                     (String) mapVariables.get(Constants.FUNCTION_ID) ,
+                     (String) mapVariables.get(Constants.TRANSACTION_ID),
+                     (String) mapVariables.get(Constants.TRANSACTION_STATUS));
+            CompletableFuture.runAsync(() -> transactionsRestClient.update(request));
+            
         } catch (WebApplicationException e) {
             if (e.getResponse().getStatus() == RestResponse.StatusCode.INTERNAL_SERVER_ERROR) {
                 log.error("Retrieve variables failed! Task id is null or does ont exist.");
@@ -541,11 +489,12 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
                 throw new ProcessException(ProcessErrorEnum.GENERIC);
             }
         } finally {
-            logElapsedTime(CAMUNDA_GET_TASK_VARIABLES_LOG_ID, start);
+            logElapsedTime(CAMUNDA_GET_TASK_VARIABLES_LOG_ID , start);
         }
 
         return Utility.buildVariableResponse(taskVariables.getEntity(), variables, buttons);
     }
+
 
     /**
      * 
@@ -573,7 +522,7 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
                 throw new ProcessException(ProcessErrorEnum.GENERIC);
             }
         } finally {
-            logElapsedTime(CAMUNDA_GET_RESOURCES_LOG_ID, start);
+            logElapsedTime(CAMUNDA_GET_RESOURCES_LOG_ID , start);
         }
 
         return camundaGetResourcesResponse.getEntity().stream().findFirst().get().getId();
@@ -592,11 +541,10 @@ public class ProcessServiceImpl extends CommonLogic implements ProcessService {
         RestResponse<String> camundaGetResourceBinaryResponse;
 
         try {
-            log.info("CAMUNDA GET RESOURCE BINARY sending request with params: [ deploymentId: {}, resourceId {}]",
-                    deploymentId, resourceId);
+            log.info("CAMUNDA GET RESOURCE BINARY sending request with params: [ deploymentId: {}, resourceId {}]", deploymentId, resourceId);
             start = System.currentTimeMillis();
             camundaGetResourceBinaryResponse = camundaRestClient.getResourceBinary(deploymentId, resourceId);
-
+            
             log.info("Resource xml retrieved!");
         } catch (WebApplicationException e) {
             if (e.getResponse().getStatus() == RestResponse.StatusCode.BAD_REQUEST) {
